# depgate

./: .gitignore  .pylintrc  CONTRIBUTORS.md  README.md  pyproject.toml  requirements.txt
docs/: analysis-levels.md  configuration.md  depgate.example.yml  mcp-server.md  opensourcemalware.md  output-formats.md  policy-configuration.md  proxy-server.md  repository-discovery.md  run-mode.md  supported-package-managers.md  version-resolution.md
scripts/: run-e2e.sh
src/: __init__.py  args.py  cli_build.py  cli_config.py  cli_io.py  cli_mcp.py  cli_proxy.py  cli_registry.py  cli_run.py  combobulator.py  constants.py  depgate.py  mcp_schemas.py  mcp_validate.py  metapackage.py  run_wrappers.py
tests/: README-e2e.md  conftest.py  extract-dep-npm.py  pom.xml  public_checkers.py  test_args_policy_preset.py  test_client_logging.py  test_direct_only_scan.py  test_facts_new_metrics.py  test_github_client.py  test_github_rate_limit_config.py  test_gitlab_client.py  test_heuristic_scoring_fixes.py  test_heuristics_breakdown_logging.py  test_heuristics_trust_and_release_age.py  test_http_client_wrapped_unit.py  test_maven_scan_coverage.py  test_mcp_direct_only_require_lockfile.py  test_mcp_findings_comprehensive.py  test_mcp_nuget_integration.py  test_mcp_scan_project_integration.py  test_mcp_server_basic.py  test_mcp_stdio_integration.py  test_mcp_version_mismatch.py  test_metapackage_new_properties.py  test_npm_lockfile_parser.py  test_npm_repo_discovery.py  test_npm_scan_lockfiles.py  test_nuget_client.py  test_nuget_discovery.py  test_nuget_enrich.py  test_nuget_integration.py  (+31 more)
(+88 files in other folders)
